[package]
name = "hydra-lsp"
version = "0.1.0"
edition = "2021"
authors = ["hydra-lsp contributors"]
description = "Language Server Protocol implementation for Hydra configuration files"
license = "MIT"
repository = "https://github.com/m-lyon/hydra-lsp"

[dependencies]
# LSP framework
tower-lsp = "0.20"
tokio = { version = "1.42", features = ["full"] }

# Async utilities
async-trait = "0.1"

# State management
dashmap = "6.1"
parking_lot = "0.12"

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Python parsing and analysis
# These crates are from the astral-sh/ruff monorepo
ruff_python_parser = { git = "https://github.com/astral-sh/ruff" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff" }
ruff_db = { git = "https://github.com/astral-sh/ruff" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff" }
ty_module_resolver = { git = "https://github.com/astral-sh/ruff" }
ty_python_semantic = { git = "https://github.com/astral-sh/ruff" }

# Salsa for incremental computation (used by ty)
salsa = "0.18"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
