[package]
name = "hydra-lsp"
version = "0.1.0"
edition = "2021"
authors = ["hydra-lsp contributors"]
description = "Language Server Protocol implementation for Hydra configuration files"
license = "MIT"
repository = "https://github.com/m-lyon/hydra-lsp"

[lib]
name = "hydra_lsp"
path = "src/lib.rs"

[[bin]]
name = "hydra-lsp"
path = "src/main.rs"

[dependencies]
# LSP framework
tower-lsp = "0.20"
tokio = { version = "1.42", features = ["full"] }

# Async utilities
async-trait = "0.1"

# State management
dashmap = "6.1"
parking_lot = "0.12"

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Python parsing and analysis
# These crates are from the astral-sh/ruff monorepo
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev = "fbb5c8aa3c19891f2a6d78ccf335ae91c94f98ca" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev = "fbb5c8aa3c19891f2a6d78ccf335ae91c94f98ca" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", rev = "fbb5c8aa3c19891f2a6d78ccf335ae91c94f98ca" }
ruff_db = { git = "https://github.com/astral-sh/ruff", rev = "fbb5c8aa3c19891f2a6d78ccf335ae91c94f98ca", features = [
    "os",
] }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", rev = "fbb5c8aa3c19891f2a6d78ccf335ae91c94f98ca" }
ty_module_resolver = { git = "https://github.com/astral-sh/ruff", rev = "fbb5c8aa3c19891f2a6d78ccf335ae91c94f98ca" }
ty_python_semantic = { git = "https://github.com/astral-sh/ruff", rev = "fbb5c8aa3c19891f2a6d78ccf335ae91c94f98ca" }
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "ce80691fa0b87dc2fd2235a26544e63e5e43d8d3", default-features = false, features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
] }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
insta = { version = "1.45", features = ["yaml"] }
temp-dir = "0.1"
fs_extra = "1.3"
serde_json = "1.0"
